# advent_of_code_2023

./: .gitignore  Cargo.toml
day1/: Cargo.toml
day1/src/: main.rs
day2/: Cargo.toml
day2/src/: lib.rs
day3/: Cargo.toml
day3/src/: lib.rs
day4/: Cargo.toml
day4/src/: lib.rs  main.rs
markup/: Cargo.toml
markup/src/: lib.rs
shared/: Cargo.toml
shared/src/: day1.rs  day10.rs  day11.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
src/: day1.rs  day2.rs
