[package]
name = "aoc_2023_shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linkme = "0.3"
thiserror = "1.0"
regex = "1.10"
lazy_static = "1.4.0"
aoc_2023_markup = { path = "../markup" }
indoc = "2.0"
itertools = "0.12"
stackvector="1.1"
nom = "7.1.3"
num = "0.4.1"